--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h3>nombre</h3>
                     <p>número</p>
                     <p>dirección</p>
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined icono">
                         delete
                         </span>
                 </div>
@@ -38,6 +38,7 @@
        </div> 
 
     </div>
-    
+    <script src="main.js"></script>
+    <script src="funciones.js"></script>
 </body>
 </html>
