--- a/index.html
+++ b/index.html
@@ -17,28 +17,19 @@
        <!--formulario de datos-->
        <div class="formulario-datos">
             <input type="text" class="nombre" placeholder="nombre">
-            <input type="text" class="número" placeholder="número">
-            <input type="text" class="dirección" placeholder="dirección">
+            <input type="text" class="numero" placeholder="numero">
+            <input type="text" class="direccion" placeholder="direccion">
             <button class="btn-agregar-tarea">agregar tarea</button>
 
             <!--listado tareas-->
             <div class="listado-tareas">
-                <div class="tarea">
-                    <h3>nombre</h3>
-                    <p>número</p>
-                    <p>dirección</p>
-                    <span class="material-symbols-outlined icono">
-                        delete
-                        </span>
-                </div>
+              
+          
             </div>
-
-
-
        </div> 
 
     </div>
-    <script src="main.js"></script>
     <script src="funciones.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
